Agreggacion de Nlogs

--- a/NLog.config
+++ b/NLog.config
@@ -6,26 +6,23 @@
       internalLogLevel="Off"
       internalLogFile="c:\temp\nlog-internal.log">
 
-	<!-- Variables (opcionales) -->
 	<variable name="logDirectory" value="${basedir}/logs" />
 
-	<!-- Targets -->
 	<targets>
-		<!-- Log a archivo -->
 		<target xsi:type="File"
 				name="logfile"
 				fileName="${logDirectory}/${shortdate}.log"
 				layout="${longdate} | ${level:uppercase=true} | ${logger} | ${message} ${exception:format=tostring}" />
-
-		<!-- Log a consola de depuración (útil mientras desarrollas) -->
-		<target xsi:type="Debugger" name="debugger"
+		<target xsi:type="Debugger"
+				name="debugger"
 				layout="${longdate} | ${level:uppercase=true} | ${logger} | ${message} ${exception:format=tostring}" />
 	</targets>
 
-	<!-- Reglas -->
 	<rules>
-		<!-- Loguear todo desde Info hasta Fatal -->
+		<!-- Ignorar logs de EF Core por debajo de Warning -->
+		<logger name="Microsoft.EntityFrameworkCore.*" minlevel="Warn" final="true" />
+
+		<!-- Loguear todo lo demás desde Info -->
 		<logger name="*" minlevel="Info" writeTo="logfile,debugger" />
 	</rules>
 </nlog>
-
